getUser and logout added
